2006-11-13  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Add a work-around for Windows.
	* qscintilla2.m4: #undef main if necessary.

2006-11-13  Akim Demaille  <akim.demaille@free.fr>

	Add check.mk
	* check.mk: New, from Vaucanson.
	* test.sh: Use a banner when reporting files.

2006-11-09  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	AC_SUBST QSCINTILLA2_LDFLAGS.
	* qscintilla2.m4: Here.

2006-11-09  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Add a macro to detect QScintilla2.
	* qscintilla2.m4: New. Defines the macro WITH_QSCINTILLA2. The way I
          find libqscintilla2 seem rather fragile.

2006-11-07  Akim Demaille  <demaille@gostai.com>

	More posix -> engine
	* urbi-dirs.m4: here.

2006-11-07  Akim Demaille  <demaille@gostai.com>

	posix -> engine
	* urbi-dirs.m4: Expect engine, not posix as an urbi_env.

2006-11-07  Akim Demaille  <demaille@gostai.com>

	nostdinc
	* urbi-engine.ac: Pass it to Automake.

2006-11-07  Akim Demaille  <demaille@gostai.com>

	Execute URBI_LIBPORT earlier
	* urbi-engine.ac: to catch cmd line error earlier.

2006-11-07  Akim Demaille  <demaille@gostai.com>

	Work around AC_REQUIRE issues
	* urbi-engine.m4: Rename as...
	* urbi-engine.ac: this.
	Adjust to be included, not to define a macro.

2006-11-07  Akim Demaille  <demaille@gostai.com>

	Fixes and improvements
	* ax-prefix-config-h.m4: Use config_headers, not CONFIG_HEADERS,
	since the former contains all the declared headers, while the latter
	contains only those about to be instantiated.
	* urbi-config-headers-prefixed.m4 (URBI_PREFIX_CONFIG_H): New.
	* urbi-libport.m4: Require the instantiation of libport/config.h.
	* build-aux.mk: Remove libport svn sugar.

2006-11-07  Akim Demaille  <demaille@gostai.com>

	SVN
	* urbi-build-aux.m4 (SVN): Define it.

2006-11-07  Akim Demaille  <demaille@gostai.com>

	Define LIBPORT_CPPFLAGS
	* urbi-libport.m4: Do that.
	* init.mk (EXTRA_HEADERS): New.

2006-11-07  Akim Demaille  <demaille@gostai.com>

	Simplify